@@ -1,48 +1,32 @@
-plugins {
-    id 'java'
+configurations {
+    all*.exclude group: 'org.eclipse.jetty.orbit', module: 'javax.servlet'
+    all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
 }
 
-description = "Spark Driver Module"
-
-ext {
-    sparkVersion = '3.5.1' // Spark 3.5.1 is latest stable as of writing for 3.5.x branch, use 3.5.0 or 3.5.1. 3.5.5 seems not to exist. Let's use 3.5.1.
-    // Hadoop version is typically managed by Spark. Spark 3.5.1 bundles Hadoop 3.3.4.
-    // If you must force Hadoop 3.3.6, it can be complex due to transitive dependencies.
-    // It's generally recommended to use the Hadoop version Spark is built with.
+configurations.all {
+    resolutionStrategy {
+        force "org.codehaus.janino:janino:$sparkJaninoVersion"
+        force "org.codehaus.janino:commons-compiler:$sparkJaninoVersion"
+        force "com.fasterxml.jackson.core:jackson-core:$sparkJacksonVersion"
+        force "com.fasterxml.jackson.core:jackson-databind:$sparkJacksonVersion"
+        force "com.fasterxml.jackson.module:jackson-module-scala_$apacheSparkScalaVersion:$sparkJacksonVersion"
+    }
 }
 
 dependencies {
-    implementation project(':spark-distributed-library')
+    compile project(':spark-distributed-library')
 
-    implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
-    implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
-    implementation "org.apache.spark:spark-mllib_2.12:${sparkVersion}" // For mllib specific APIs
-    implementation "org.apache.spark:spark-ml_2.12:${sparkVersion}" // For ml (DataFrame-based) APIs
+    compile("org.springframework:spring-beans:$springFrameworkVersion")
+    compile("org.springframework:spring-context:$springFrameworkVersion")
 
-    // Spring context for @Component, @Service, @Value etc.
-    implementation 'org.springframework:spring-context'
-    implementation 'org.springframework:spring-beans' // For @Value
+    compile("org.apache.spark:spark-core_$apacheSparkScalaVersion:$apacheSparkVersion")
+    compile("org.apache.spark:spark-sql_$apacheSparkScalaVersion:$apacheSparkVersion")
+    compile("org.apache.spark:spark-core_2.11:2.0.2")
 
-    // MNISTImageFile and MNISTLabelFile use AWT for BufferedImage
-    implementation 'java.desktop:java.desktop:袈裟' // This is a placeholder, AWT is part of JDK.
-    // This dependency format is incorrect.
-    // java.desktop module is available by default in JDK 9+
-    // No explicit dependency needed for AWT/ImageIO if using JDK 9+ modules.
+    compile("org.slf4j:slf4j-api:$slf4jVersion")
+    compile("ch.qos.logback:logback-classic:$logbackVersion")
+    compile("org.slf4j:log4j-over-slf4j:$slf4jVersion")
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
-    testImplementation 'org.springframework:spring-test' // For Spring testing utilities
-
+    testCompile("org.springframework:spring-test:$springFrameworkVersion")
+    testCompile("junit:junit:$junitVersion")
 }
-
-// Correct way to enable java.desktop module if modular (not typically needed for non-modular projects)
-// tasks.withType(JavaCompile) {
-//     options.compilerArgs += '--add-modules'
-//     options.compilerArgs += 'java.desktop'
-// }
-// tasks.withType(Test) {
-//     jvmArgs += '--add-modules'
-//     jvmArgs += 'java.desktop'
-// }
-
-// For running tests that might use Spark, ensure Spark Home or winutils are set up if on Windows.
